# agent-patrol

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
src/agent_patrol/: __init__.py  interventions.py  monitor.py  trace.py
src/agent_patrol/detectors/: __init__.py  base.py  drift.py  loop.py  stall.py
tests/: test_drift_detector.py  test_loop_detector.py  test_monitor.py  test_stall_detector.py
