[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-patrol"
version = "0.1.0"
description = "Detect and recover from LLM agent failure modes: loops, stalls, and drift"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Jesse Cook" }]
keywords = ["llm", "agents", "monitoring", "loop-detection", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
embeddings = ["numpy>=1.24"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_patrol"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
